--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                                 <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>70 Students</small>
                                 <small class="m-0"><i class="far fa-clock text-primary mr-2"></i>1h 00m</small>
                             </div>
-                            <a class="h5" href="">Introduction to machine learing in AWS</a>
+                            <a class="h5" href="">Introduction to machine learning in AWS</a>
                             <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.2 <small>(250)</small>
